workshop04/allow-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: allow-ing-netpol
   labels:
      name: allow-ing-netpol

spec:
   # this policy will be applied to this pod
   podSelector:
      matchLabels:
         name: fortune-pod
   policyTypes:
   - Ingress
   ingress:
   - from:
     - namespaceSelector:
         matchLabels:
            name: ingress
       podSelector:
         matchLabels:
            app.kubernetes.io/component: controller
