workshop04/np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: mypol-netpol
   labels:
      name: mypol-netpol

spec:
   # this policy will be applied to this pod
   podSelector:
      matchLabels:
         name: fortune-pod
   policyTypes:
   - Ingress
   ingress:
   - from:
     - podSelector:
         matchLabels:
            app: myshell
